--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 	<title>Miki Wakaaa</title>
 	<link href="styles.css" rel="stylesheet" type="text/css">
-	<link rel="icon" href="IMG/LOGO_WAKAAA/logo_wakaaa__3.jpg">
+	<link rel="icon" href="logo_wakaaa__3.jpg">
 </head>
 
 
