--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<! ---- ---- ---- LOGO -->
 	<a href="index.html" class="linkImage">
-		<img src="IMG/LOGO_WAKAAA/logo_wakaaa__3.jpg" alt="Miki Wakaaa">
+		<img src="logo_wakaaa__3.jpg" alt="Miki Wakaaa">
 	</a>
 
 	<br/>
