--- a/autres_travaux/index.html
+++ b/autres_travaux/index.html
@@ -1,1 +1,217 @@
+<!DOCTYPE html>
+<html>
+<head> 
+  <title>Miki Wakaaa</title> 
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <link rel="icon" href="../logo_wakaaa__3.jpg">
+</head>
+<body>
 
+<img src="../logo_wakaaa__3.jpg">
+<h1>Miki Wakaaa</h1>
+<b>Courriel :</b> 
+<a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
+
+<!-- ===================================================================== -->
+<hr/>
+
+<a href="../index.html"> Retour </a>
+
+<h1>Autres travaux</h1>
+
+<center>
+	<a href="le_reflet.jpg"><img src="le_reflet_thumbnail.jpg"></a>
+	</br></br>
+	Le reflet
+	
+	</br></br></br></br></br>
+	
+	<a href="homme_masque.jpg"><img src="homme_masque_thumbnail.jpg"></a>
+	</br></br>
+	L'homme masqué
+	
+	</br></br></br></br></br>
+
+	<a href="visage_regard.jpg"><img src="visage_regard_thumbnail.jpg"></a>
+	</br></br>
+	Visage au regard brouillé
+	
+	</br></br></br></br></br>
+	
+	<a href="monde_des_vivants.jpg"><img src="monde_des_vivants_thumbnail.jpg"></a>
+	</br></br>
+	Le monde des vivants
+	
+	</br></br></br></br></br>
+	
+	
+	<a href="homme_animaux_machine_vivre.jpg"><img src="homme_animaux_machine_vivre_thumbnail.jpg"></a>
+	</br></br>
+	Homme et animaux dans la Machine Vivre
+	
+	</br></br></br></br></br>
+
+	<a href="prison_interieure.jpg"><img src="prison_interieure_thumbnail.jpg"></a>
+	</br></br>
+	La prison intérieure
+	
+	</br></br></br></br></br>	
+	
+	<a href="visage_double.jpg"><img src="visage_double_thumbnail.jpg"></a>
+	</br></br>
+	Le visage double
+	
+	</br></br></br></br></br>
+	
+	
+	<a href="la_pensive.jpg"><img src="la_pensive_thumbnail.jpg"></a>
+	</br></br>
+	La pensive
+
+	</br></br></br></br></br>
+	
+	<a href="abstraction_duelle.jpg"><img src="abstraction_duelle_thumbnail.jpg"></a>
+	</br></br>
+	Abstraction duelle
+
+	</br></br></br></br></br>
+	
+	<a href="nu_marchant.jpg"><img src="nu_marchant_thumbnail.jpg"></a>
+	</br></br>
+	Nu marchant
+	
+	</br></br></br></br></br>
+	
+	<a href="portrait_blanc_gris.jpg"><img src="portrait_blanc_gris_thumbnail.jpg"></a>
+	</br></br>
+	Portrait en gris et blanc
+
+	</br></br></br></br></br>
+	
+	<a href="les_modeles.jpg"><img src="les_modeles_thumbnail.jpg"></a>
+	</br></br>
+	Les modèles
+
+	</br></br></br></br></br>
+	
+	<a href="metabede_noir_et_blanc.jpg"><img src="metabede_noir_et_blanc_thumbnail.jpg"></a>
+	</br></br>
+	Métabédé en noir et blanc
+
+	</br></br></br></br></br>	
+	
+	<a href="femmes_a_la_toilette.jpg"><img src="femmes_a_la_toilette_thumbnail.jpg"></a>
+	</br></br>
+	Femmes à la toilette
+
+	</br></br></br></br></br>
+	
+	<a href="homme_au_torse_nu.jpg"><img src="homme_au_torse_nu_thumbnail.jpg"></a>
+	</br></br>
+	Homme au torse nu
+
+	</br></br></br></br></br>
+	
+	<a href="firminus.jpg"><img src="firminus_thumbnail.jpg"></a>
+	</br></br>
+	Firminus
+
+	</br></br></br></br></br>
+	
+	<a href="portrait_encre.jpg"><img src="portrait_encre_thumbnail.jpg"></a>
+	</br></br>
+	Portrait à l'encre
+
+	</br></br></br></br></br>
+	
+	<a href="oiseau_montagne_et_soleil.jpg"><img src="oiseau_montagne_et_soleil_thumbnail.jpg"></a>
+	</br></br>
+	L'oiseau dans le jour naissant
+	
+	</br></br></br></br></br>
+	
+	<a href="homme_au_pli.jpg"><img src="homme_au_pli_thumbnail.jpg"></a>
+	</br></br>
+	Homme au pli
+	
+	</br></br></br></br></br>
+	
+	<a href="homme_double_bulle.jpg"><img src="homme_double_bulle_thumbnail.jpg"></a>
+	</br></br>
+	Homme à double bulle
+	
+	</br></br></br></br></br>
+	
+	<a href="homme_caressant_chat.jpg"><img src="homme_caressant_chat_thumbnail.jpg"></a>
+	</br></br>
+	Homme caressant un chat	
+	
+	</br></br></br></br></br>
+	
+	<a href="femme_assise.jpg"><img src="femme_assise_thumbnail.jpg"></a>
+	</br></br>
+	Femme assise
+	
+	</br></br></br></br></br>
+
+	<a href="homme_chat_ville.jpg"><img src="homme_chat_ville_thumbnail.jpg"></a>
+	</br></br>
+	Homme et chat dans la ville
+	
+	</br></br></br></br></br>
+
+	<a href="enfants_animaux.jpg"><img src="enfants_animaux_thumbnail.jpg"></a>
+	</br></br>
+	Enfants et animaux
+	
+	</br></br></br></br></br>
+
+	<a href="le_questionneur.jpg"><img src="le_questionneur_thumbnail.jpg"></a>
+	</br></br>
+	Le questionneur
+	
+	</br></br></br></br></br>
+
+	<a href="trois_hommes_et_masque.jpg"><img src="trois_hommes_et_masque_thumbnail.jpg"></a>
+	</br></br>
+	Trois hommes et un masque
+	
+	</br></br></br></br></br>
+
+	<a href="homme_accoude.jpg"><img src="homme_accoude_thumbnail.jpg"></a>
+	</br></br>
+	Homme accoudé
+	
+	</br></br></br></br></br>	
+
+	<a href="pomme_tasse_serviette.jpg"><img src="pomme_tasse_serviette_thumbnail.jpg"></a>
+	</br></br>
+	Pomme, tasse au café et serviette en papier
+	
+	</br></br></br></br></br>	
+
+	<a href="le_general.jpg"><img src="le_general_thumbnail.jpg"></a>
+	</br></br>
+	Le Général
+	
+	</br></br></br></br></br>	
+
+	<a href="le_dessinateur.jpg"><img src="le_dessinateur_thumbnail.jpg"></a>
+	</br></br>
+	Le dessinateur
+	
+	</br></br></br></br></br>	
+
+	<a href="la_coquette.jpg"><img src="la_coquette_thumbnail.jpg"></a>
+	</br></br>
+	La coquette
+
+	</br></br></br></br></br>
+	
+	<a href="femme_assise_sur_lit.jpg"><img src="femme_assise_sur_lit_thumbnail.jpg"></a>
+	</br></br>
+	Femme assise sur un lit
+</center>
+
+</body>
+</html>
