--- a/index.html
+++ b/index.html
@@ -3,68 +3,68 @@
 <head> 
   <title>Miki Wakaaa</title> 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="icon" href="logo_wakaaa__3.jpg">
+  <link rel="icon" href="../logo_wakaaa__3.jpg">
 </head>
 <body>
 
 <img src="logo_wakaaa__3.jpg">
-
 <h1>Miki Wakaaa</h1>
 <b>Courriel :</b> 
 <a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
 
+<!--
+<hr/>
+
+<h1>Réseaux sociaux</h1>
+ 
+<a href="https://www.facebook.com/MikiWakaaa">
+Facebook
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.instagram.com/miki.wakaaa/">
+Instagram
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://twitter.com/mikiwakaaa">
+Twitter
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.youtube.com/user/mikiwakaaa">
+Youtube
+</a>
+-->
+
+<hr/><!-- ===================================================================== -->
+<h1>Poésie</h1>
+<ul>
+	<li> 
+		<a href="poesie/progremmes.html">Progremmes</a>
+	</li>
+</br>
+</ul>
+
+<hr/><!-- ===================================================================== -->
+<h1>Peinture et dessin</h1>
+
+<ul>
+	<li><a href="chaotisme/index.html"> Chaotisme </a>
+	</li>
+</br>
+	<li><a href="autres_travaux/index.html"> Autres travaux </a>
+	</li>
+</ul>
 
 <!-- ===================================================================== -->
-<hr/>
-<br/>
+<!-- 
+<h1>Autres textes</h1>
 
-<center>
+<ul>
+	<li><a href="..."> ...  </a>
+	</li>
+</br>
 
-<a href="1.jpg"><img src="1_thumbnail.jpg"></a>
-&nbsp; &nbsp;
-
-<a href="2.jpg"><img src="2_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="3.jpg"><img src="3_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="4.jpg"><img src="4_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="5.jpg"><img src="5_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="6.jpg"><img src="6_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="7.jpg"><img src="7_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="8.jpg"><img src="8_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="9.jpg"><img src="9_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="10.jpg"><img src="10_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="11.jpg"><img src="11_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="12.jpg"><img src="12_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-<a href="13.jpg"><img src="13_thumbnail.jpg"></a>
-&nbsp; &nbsp; 
-
-</center>
-
-
-<!-- ===================================================================== -->
-<br/>
-<hr/>
+</ul>
+-->
 
 </body>
 </html>
