--- a/autres_travaux/index.html
+++ b/autres_travaux/index.html
@@ -17,7 +17,7 @@
 
 <a href="../index.html"> Retour </a>
 
-<h1>Autres travaux</h1>
+<h1>Autres travaux (le bouillon magique)</h1>
 
 <center>
 	<a href="le_reflet.jpg"><img src="le_reflet_thumbnail.jpg"></a>
