--- a/index.html
+++ b/index.html
@@ -55,16 +55,15 @@ Youtube
 </ul>
 
 <!-- ===================================================================== -->
-<!-- 
 <h1>Autres textes</h1>
 
 <ul>
-	<li><a href="..."> ...  </a>
+	<li><a href="autres_textes/le_judaisme_orthodoxe_est_faux.pdf"> Le judaïsme (orthodoxe) est faux  </a>
 	</li>
 </br>
 
 </ul>
--->
+
 
 </body>
 </html>
