--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Youtube
 	<li><a href="chaotisme/index.html"> Chaotisme </a>
 	</li>
 </br>
-	<li><a href="autres_travaux/index.html"> Autres travaux (le bouillon magique) </a>
+	<li><a href="autres_travaux/index.html"> Autres travaux </a>
 	</li>
 </ul>
 
