--- a/autres_travaux/index.html
+++ b/autres_travaux/index.html
@@ -12,205 +12,243 @@
 <b>Courriel :</b> 
 <a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
 
+
 <!-- ===================================================================== -->
 <hr/>
 
 <a href="../index.html"> Retour </a>
 
-<h1>Autres travaux (le bouillon magique)</h1>
-
-<center>
-	<a href="le_reflet.jpg"><img src="le_reflet_thumbnail.jpg"></a>
+<h1>Chaotisme</h1>
+ 
+<center>	
+	<a href="portrait_chaotique_laureline.jpg"><img src="portrait_chaotique_laureline_thumbnail.jpg"></a>
 	</br></br>
-	Le reflet
+	Portrait chaotique de Laureline
 	
 	</br></br></br></br></br>
 	
-	<a href="homme_masque.jpg"><img src="homme_masque_thumbnail.jpg"></a>
+	<a href="portrait_chaotique_jim_phelps.jpg"><img src="portrait_chaotique_jim_phelps_thumbnail.jpg"></a>
 	</br></br>
-	L'homme masqué
-	
-	</br></br></br></br></br>
-
-	<a href="visage_regard.jpg"><img src="visage_regard_thumbnail.jpg"></a>
-	</br></br>
-	Visage au regard brouillé
+	Portrait chaotique de Jim Phelps
 	
 	</br></br></br></br></br>
 	
-	<a href="monde_des_vivants.jpg"><img src="monde_des_vivants_thumbnail.jpg"></a>
+	<a href="portrait_chaotique_barbarella.jpg"><img src="portrait_chaotique_barbarella_thumbnail.jpg"></a>
 	</br></br>
-	Le monde des vivants
-	
-	</br></br></br></br></br>
-	
-	
-	<a href="homme_animaux_machine_vivre.jpg"><img src="homme_animaux_machine_vivre_thumbnail.jpg"></a>
-	</br></br>
-	Homme et animaux dans la Machine Vivre
-	
-	</br></br></br></br></br>
-
-	<a href="prison_interieure.jpg"><img src="prison_interieure_thumbnail.jpg"></a>
-	</br></br>
-	La prison intérieure
-	
-	</br></br></br></br></br>	
-	
-	<a href="visage_double.jpg"><img src="visage_double_thumbnail.jpg"></a>
-	</br></br>
-	Le visage double
-	
-	</br></br></br></br></br>
-	
-	
-	<a href="la_pensive.jpg"><img src="la_pensive_thumbnail.jpg"></a>
-	</br></br>
-	La pensive
+	Portrait chaotique de Barbarella
 
 	</br></br></br></br></br>
 	
-	<a href="abstraction_duelle.jpg"><img src="abstraction_duelle_thumbnail.jpg"></a>
+	<a href="portrait_chaotique_adam_pere.jpg"><img src="portrait_chaotique_adam_pere_thumbnail.jpg"></a>
 	</br></br>
-	Abstraction duelle
-
-	</br></br></br></br></br>
-	
-	<a href="nu_marchant.jpg"><img src="nu_marchant_thumbnail.jpg"></a>
-	</br></br>
-	Nu marchant
-	
-	</br></br></br></br></br>
-	
-	<a href="portrait_blanc_gris.jpg"><img src="portrait_blanc_gris_thumbnail.jpg"></a>
-	</br></br>
-	Portrait en gris et blanc
-
-	</br></br></br></br></br>
-	
-	<a href="les_modeles.jpg"><img src="les_modeles_thumbnail.jpg"></a>
-	</br></br>
-	Les modèles
-
-	</br></br></br></br></br>
-	
-	<a href="metabede_noir_et_blanc.jpg"><img src="metabede_noir_et_blanc_thumbnail.jpg"></a>
-	</br></br>
-	Métabédé en noir et blanc
-
-	</br></br></br></br></br>	
-	
-	<a href="femmes_a_la_toilette.jpg"><img src="femmes_a_la_toilette_thumbnail.jpg"></a>
-	</br></br>
-	Femmes à la toilette
-
-	</br></br></br></br></br>
-	
-	<a href="homme_au_torse_nu.jpg"><img src="homme_au_torse_nu_thumbnail.jpg"></a>
-	</br></br>
-	Homme au torse nu
-
-	</br></br></br></br></br>
-	
-	<a href="firminus.jpg"><img src="firminus_thumbnail.jpg"></a>
-	</br></br>
-	Firminus
-
-	</br></br></br></br></br>
-	
-	<a href="portrait_encre.jpg"><img src="portrait_encre_thumbnail.jpg"></a>
-	</br></br>
-	Portrait à l'encre
-
-	</br></br></br></br></br>
-	
-	<a href="oiseau_montagne_et_soleil.jpg"><img src="oiseau_montagne_et_soleil_thumbnail.jpg"></a>
-	</br></br>
-	L'oiseau dans le jour naissant
-	
-	</br></br></br></br></br>
-	
-	<a href="homme_au_pli.jpg"><img src="homme_au_pli_thumbnail.jpg"></a>
-	</br></br>
-	Homme au pli
-	
-	</br></br></br></br></br>
-	
-	<a href="homme_double_bulle.jpg"><img src="homme_double_bulle_thumbnail.jpg"></a>
-	</br></br>
-	Homme à double bulle
-	
-	</br></br></br></br></br>
-	
-	<a href="homme_caressant_chat.jpg"><img src="homme_caressant_chat_thumbnail.jpg"></a>
-	</br></br>
-	Homme caressant un chat	
-	
-	</br></br></br></br></br>
-	
-	<a href="femme_assise.jpg"><img src="femme_assise_thumbnail.jpg"></a>
-	</br></br>
-	Femme assise
+	Portrait chaotique d'Adam le père
 	
 	</br></br></br></br></br>
 
-	<a href="homme_chat_ville.jpg"><img src="homme_chat_ville_thumbnail.jpg"></a>
+	<a href="A.jpg"><img src="A_thumbnail.jpg"></a>
 	</br></br>
-	Homme et chat dans la ville
+	Le rattrapeur de bus chaotique
 	
 	</br></br></br></br></br>
 
-	<a href="enfants_animaux.jpg"><img src="enfants_animaux_thumbnail.jpg"></a>
+	<a href="B.jpg"><img src="B_thumbnail.jpg"></a>
 	</br></br>
-	Enfants et animaux
+	Personnage chaotique dans un débat
+	
+	</br></br></br></br></br>
+	
+	<a href="C.jpg"><img src="C_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Gérôme 
+	
+	</br></br></br></br></br>
+	
+	<a href="D.jpg"><img src="D_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Adrien
+	
+	</br></br></br></br></br>
+	
+	<a href="E.jpg"><img src="E_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Jean-Guillaume
+	
+	</br></br></br></br></br>
+	
+	<a href="F.jpg"><img src="F_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Anne
+	
+	</br></br></br></br></br>
+	
+	<a href="G.jpg"><img src="G_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Gil 
+	
+	</br></br></br></br></br>
+	
+	<a href="H.jpg"><img src="H_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Antoinette
+	
+	</br></br></br></br></br>
+	
+	<a href="I.jpg"><img src="I_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Spirou
+	
+	</br></br></br></br></br>
+	
+	<a href="J.jpg"><img src="J_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Astérix
 	
 	</br></br></br></br></br>
 
-	<a href="le_questionneur.jpg"><img src="le_questionneur_thumbnail.jpg"></a>
+	<a href="K.jpg"><img src="K_thumbnail.jpg"></a>
 	</br></br>
-	Le questionneur
+	Portrait chaotique d'Éléonore 
+	
+	</br></br></br></br></br>
+	
+	<a href="L.jpg"><img src="L_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Alida
+	
+	</br></br></br></br></br>
+	
+	<a href="M.jpg"><img src="M_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Marie-Louise
+	
+	</br></br></br></br></br>
+	
+	<a href="N.jpg"><img src="N_thumbnail.jpg"></a>
+	</br></br>
+	Homme au costume chaotique
+	
+	</br></br></br></br></br>
+	
+	<a href="O.jpg"><img src="O_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Caroline
+	
+	</br></br></br></br></br>
+	
+	<a href="P.jpg"><img src="P_thumbnail.jpg"></a>
+	</br></br>
+	Mère et enfant chaotiques
 	
 	</br></br></br></br></br>
 
-	<a href="trois_hommes_et_masque.jpg"><img src="trois_hommes_et_masque_thumbnail.jpg"></a>
+	<a href="Q.jpg"><img src="Q_thumbnail.jpg"></a>
 	</br></br>
-	Trois hommes et un masque
+	Portrait chaotique de Jacques
+	
+	</br></br></br></br></br>
+	
+	<a href="R.jpg"><img src="R_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Romain 
+	
+	</br></br></br></br></br>
+	
+	<a href="S.jpg"><img src="S_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique d'Héloïse 
 	
 	</br></br></br></br></br>
 
-	<a href="homme_accoude.jpg"><img src="homme_accoude_thumbnail.jpg"></a>
+	<a href="T.jpg"><img src="T_thumbnail.jpg"></a>
 	</br></br>
-	Homme accoudé
+	Portrait chaotique de Fabien
 	
-	</br></br></br></br></br>	
-
-	<a href="pomme_tasse_serviette.jpg"><img src="pomme_tasse_serviette_thumbnail.jpg"></a>
-	</br></br>
-	Pomme, tasse au café et serviette en papier
-	
-	</br></br></br></br></br>	
-
-	<a href="le_general.jpg"><img src="le_general_thumbnail.jpg"></a>
-	</br></br>
-	Le Général
-	
-	</br></br></br></br></br>	
-
-	<a href="le_dessinateur.jpg"><img src="le_dessinateur_thumbnail.jpg"></a>
-	</br></br>
-	Le dessinateur
-	
-	</br></br></br></br></br>	
-
-	<a href="la_coquette.jpg"><img src="la_coquette_thumbnail.jpg"></a>
-	</br></br>
-	La coquette
-
 	</br></br></br></br></br>
 	
-	<a href="femme_assise_sur_lit.jpg"><img src="femme_assise_sur_lit_thumbnail.jpg"></a>
+	<a href="U.jpg"><img src="U_thumbnail.jpg"></a>
 	</br></br>
-	Femme assise sur un lit
+	Nu chaotique aux cheveux longs
+	
+	</br></br></br></br></br>
+	
+	<a href="V.jpg"><img src="V_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Fran&#231;oise 
+	
+	</br></br></br></br></br>
+
+	<a href="W.jpg"><img src="W_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Sophie
+	
+	</br></br></br></br></br>
+	
+	<a href="X.jpg"><img src="X_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Jean-Francois
+	
+	</br></br></br></br></br>
+	
+	<a href="Y.jpg"><img src="Y_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique (étude)
+	
+	</br></br></br></br></br>
+
+	<a href="Z.jpg"><img src="Z_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Charles
+	
+	</br></br></br></br></br>
+	
+	<a href="ZA.jpg"><img src="ZA_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Hans
+	
+	</br></br></br></br></br>
+	
+	<a href="ZB.jpg"><img src="ZB_thumbnail.jpg"></a>
+	</br></br>
+	Le philosophe chaotique
+	
+	</br></br></br></br></br>
+
+	<a href="ZC.jpg"><img src="ZC_thumbnail.jpg"></a>
+	</br></br>
+	Bonnie et Clyde chaotiques
+	
+	</br></br></br></br></br>
+	
+	<a href="ZD.jpg"><img src="ZD_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de la fille du bus
+	
+	</br></br></br></br></br>
+
+	<a href="ZE.jpg"><img src="ZE_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Magalie
+	
+	</br></br></br></br></br>
+	
+	<a href="ZF.jpg"><img src="ZF_thumbnail.jpg"></a>
+	</br></br>
+	Nu chaotique
+	
+	</br></br></br></br></br>
+	
+	<a href="ZG.jpg"><img src="ZG_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de la Belle Hélène
+	
+	</br></br></br></br></br>
+	
+	<a href="ZH.jpg"><img src="ZH_thumbnail.jpg"></a>
+	</br></br>
+	Portrait chaotique de Kristin Scott Thomas
+	
+	</br></br></br></br></br>
+
 </center>
 
 </body>
