--- a/chaotisme.html
+++ b/chaotisme.html
@@ -7,244 +7,346 @@
 </head>
 <body>
 
-<center>
-
-	<img src="logo_wakaaa__3.jpg">
-	<h1>Miki Wakaaa</h1>
-	<b>Courriel :</b> 
-	<a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
+<img src="logo_wakaaa__3.jpg">
+<h1>Miki Wakaaa</h1>
+<b>Courriel :</b> 
+<a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
 	
-	<hr/> <!- -------------------------------------------- -->
+<hr/> <!- -------------------------------------------- -->
 
-	<h1>
-		Chaotisme
-	</h1>
+<h1>
+	Chaotisme
+</h1>
 
-	<h3>
+<h3>
 	<a href="index.html">Retour</a>
-	</h3>
+</h3>
 	
-	<hr/> <!- -------------------------------------------- -->
-
-	<br><br><br><br>
+<hr/> <!- -------------------------------------------- -->
  
-	<a href="chaotisme/portrait_chaotique_laureline.jpg"><img src="chaotisme/portrait_chaotique_laureline_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Laureline
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/portrait_chaotique_jim_phelps.jpg"><img src="chaotisme/portrait_chaotique_jim_phelps_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Jim Phelps
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/portrait_chaotique_barbarella.jpg"><img src="chaotisme/portrait_chaotique_barbarella_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Barbarella
+<center>
+<br><br><br>
 
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/portrait_chaotique_adam_pere.jpg"><img src="chaotisme/portrait_chaotique_adam_pere_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Adam le père
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_1.jpg">
+	<img src="__CHAOTISME/a_1_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Laureline
+<br><br><br><br><br>
 
-	<a href="chaotisme/A.jpg"><img src="chaotisme/A_thumbnail.jpg"></a>
-	<br><br>
-	Le rattrapeur de bus chaotique
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_2.jpg">
+	<img src="__CHAOTISME/a_2_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Jim Phelps
+<br><br><br><br><br>
 
-	<a href="chaotisme/B.jpg"><img src="chaotisme/B_thumbnail.jpg"></a>
-	<br><br>
-	Personnage chaotique dans un débat
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/C.jpg"><img src="chaotisme/C_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Gérôme 
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/D.jpg"><img src="chaotisme/D_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Adrien
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/E.jpg"><img src="chaotisme/E_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Jean-Guillaume
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/F.jpg"><img src="chaotisme/F_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Anne
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/G.jpg"><img src="chaotisme/G_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Gil 
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/I.jpg"><img src="chaotisme/I_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Spirou
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/J.jpg"><img src="chaotisme/J_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Astérix
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_3.jpg">
+	<img src="__CHAOTISME/a_3_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Barbarella
+<br><br><br><br><br>
 
-	<a href="chaotisme/K.jpg"><img src="chaotisme/K_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Éléonore 
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/L.jpg"><img src="chaotisme/L_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Alida
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/M.jpg"><img src="chaotisme/M_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Marie-Louise
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/N.jpg"><img src="chaotisme/N_thumbnail.jpg"></a>
-	<br><br>
-	Homme au costume chaotique
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/O.jpg"><img src="chaotisme/O_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Caroline
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/P.jpg"><img src="chaotisme/P_thumbnail.jpg"></a>
-	<br><br>
-	Mère et enfant chaotiques
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_4.jpg">
+	<img src="__CHAOTISME/a_4_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Adam le père
+<br><br><br><br><br>
 
-	<a href="chaotisme/Q.jpg"><img src="chaotisme/Q_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Jacques
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/R.jpg"><img src="chaotisme/R_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Romain 
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/S.jpg"><img src="chaotisme/S_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique d'Héloïse 
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_5.jpg">
+	<img src="__CHAOTISME/a_5_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Isabelle
+<br><br><br><br><br>
 
-	<a href="chaotisme/T.jpg"><img src="chaotisme/T_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Fabien
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/U.jpg"><img src="chaotisme/U_thumbnail.jpg"></a>
-	<br><br>
-	Nu chaotique aux cheveux longs
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/V.jpg"><img src="chaotisme/V_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Fran&#231;oise 
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_6.jpg">
+	<img src="__CHAOTISME/a_6_thumbnail.jpg">
+</a>
+<br><br>
+Le rattrapeur de bus chaotique
+<br><br><br><br><br>
 
-	<a href="chaotisme/W.jpg"><img src="chaotisme/W_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Sophie
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/X.jpg"><img src="chaotisme/X_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Jean-Francois
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/Z.jpg"><img src="chaotisme/Z_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Charles
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZA.jpg"><img src="chaotisme/ZA_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Hans
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZB.jpg"><img src="chaotisme/ZB_thumbnail.jpg"></a>
-	<br><br>
-	Le philosophe chaotique
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_7.jpg">
+	<img src="__CHAOTISME/a_7_thumbnail.jpg">
+</a>
+<br><br>
+Personnage chaotique de l'homme en débat
+<br><br><br><br><br>
 
-	<a href="chaotisme/ZC.jpg"><img src="chaotisme/ZC_thumbnail.jpg"></a>
-	<br><br>
-	Bonnie et Clyde chaotiques
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZD.jpg"><img src="chaotisme/ZD_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de la fille du bus
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_8.jpg">
+	<img src="__CHAOTISME/a_8_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Gérôme
+<br><br><br><br><br>
 
-	<a href="chaotisme/ZE.jpg"><img src="chaotisme/ZE_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Magalie
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZF.jpg"><img src="chaotisme/ZF_thumbnail.jpg"></a>
-	<br><br>
-	Nu chaotique
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZG.jpg"><img src="chaotisme/ZG_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de la Belle Hélène
-	
-	<br><br><br><br><br>
-	
-	<a href="chaotisme/ZH.jpg"><img src="chaotisme/ZH_thumbnail.jpg"></a>
-	<br><br>
-	Portrait chaotique de Kristin Scott Thomas
-	
-	<br><br><br><br><br>
+<a href="__CHAOTISME/a_9.jpg">
+	<img src="__CHAOTISME/a_9_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Adrien
+<br><br><br><br><br>
 
+<a href="__CHAOTISME/a_10.jpg">
+	<img src="__CHAOTISME/a_10_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Jean-Guillaume
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_11.jpg">
+	<img src="__CHAOTISME/a_11_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Anne
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_12.jpg">
+	<img src="__CHAOTISME/a_12_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Gil
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_13.jpg">
+	<img src="__CHAOTISME/a_13_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Éléonore
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_14.jpg">
+	<img src="__CHAOTISME/a_14_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Alida
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_15.jpg">
+	<img src="__CHAOTISME/a_15_thumbnail.jpg">
+</a>
+<br><br>
+Homme au costume chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_16.jpg">
+	<img src="__CHAOTISME/a_16_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Caroline
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_17.jpg">
+	<img src="__CHAOTISME/a_17_thumbnail.jpg">
+</a>
+<br><br>
+Mère et enfant chaotiques
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_18.jpg">
+	<img src="__CHAOTISME/a_18_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Jacques
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_19.jpg">
+	<img src="__CHAOTISME/a_19_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Romain
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_20.jpg">
+	<img src="__CHAOTISME/a_20_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique d'Héloïse
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_21.jpg">
+	<img src="__CHAOTISME/a_21_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Fabien
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_22.jpg">
+	<img src="__CHAOTISME/a_22_thumbnail.jpg">
+</a>
+<br><br>
+Nu chaotique aux cheveux longs
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_23.jpg">
+	<img src="__CHAOTISME/a_23_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Françoise
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_24.jpg">
+	<img src="__CHAOTISME/a_24_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Sophie
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_25.jpg">
+	<img src="__CHAOTISME/a_25_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Jean-Francois
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_26.jpg">
+	<img src="__CHAOTISME/a_26_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Charles
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_27.jpg">
+	<img src="__CHAOTISME/a_27_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Hans
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_28.jpg">
+	<img src="__CHAOTISME/a_28_thumbnail.jpg">
+</a>
+<br><br>
+Le philosophe chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_29.jpg">
+	<img src="__CHAOTISME/a_29_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de la fille du bus
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_30.jpg">
+	<img src="__CHAOTISME/a_30_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Magalie
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_31.jpg">
+	<img src="__CHAOTISME/a_31_thumbnail.jpg">
+</a>
+<br><br>
+Nu chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_32.jpg">
+	<img src="__CHAOTISME/a_32_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de la Belle Hélène
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_33.jpg">
+	<img src="__CHAOTISME/a_33_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Kristin Scott Thomas
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_34.jpg">
+	<img src="__CHAOTISME/a_34_thumbnail.jpg">
+</a>
+<br><br>
+Le penseur chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_35.jpg">
+	<img src="__CHAOTISME/a_35_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Thomas
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_36.jpg">
+	<img src="__CHAOTISME/a_36_thumbnail.jpg">
+</a>
+<br><br>
+Stress chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_37.jpg">
+	<img src="__CHAOTISME/a_37_thumbnail.jpg">
+</a>
+<br><br>
+Couple chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_38.jpg">
+	<img src="__CHAOTISME/a_38_thumbnail.jpg">
+</a>
+<br><br>
+Personnages chaotiques en soirée
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_39.jpg">
+	<img src="__CHAOTISME/a_39_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Lupin
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_40.jpg">
+	<img src="__CHAOTISME/a_40_thumbnail.jpg">
+</a>
+<br><br>
+Homme chaotique regardant la lune
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_41.jpg">
+	<img src="__CHAOTISME/a_41_thumbnail.jpg">
+</a>
+<br><br>
+Homme et femme au café chaotiques
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_42.jpg">
+	<img src="__CHAOTISME/a_42_thumbnail.jpg">
+</a>
+<br><br>
+Homme chaotique au chapeau regardant la lune
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_43.jpg">
+	<img src="__CHAOTISME/a_43_thumbnail.jpg">
+</a>
+<br><br>
+Spirou chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_44.jpg">
+	<img src="__CHAOTISME/a_44_thumbnail.jpg">
+</a>
+<br><br>
+Asterix chaotique
+<br><br><br><br><br>
+
+<a href="__CHAOTISME/a_45.jpg">
+	<img src="__CHAOTISME/a_45_thumbnail.jpg">
+</a>
+<br><br>
+Portrait chaotique de Marie-Louise
+<br><br><br><br><br>
 </center>
+
+
+
+
+
 
 </body>
 </html>
