--- a/index.html
+++ b/index.html
@@ -7,25 +7,71 @@
 </head>
 <body>
 
-<center>
+<img src="logo_wakaaa__3.jpg">
+<h1>Miki Wakaaa</h1>
+<b>Courriel :</b> 
+<a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
 
-	<img src="logo_wakaaa__3.jpg">
-	<h1>Miki Wakaaa</h1>
-	<b>Courriel :</b> 
-	<a href="mailto:miki.wakaaa@gmail.com">miki.wakaaa@gmail.com</a>
-	<br><br><br><br><br><br>
-	
-	<hr/> <!- -------------------------------------------- -->
-
-<h1>
-	<a href="pluriel.html">Pluriel</a>
+<hr> <!- -------------------------------------- -->
+<h1> 
+	<a href="florilege.html">Florilège</a>
 </h1>
 
-<h1>
-	<a href="chaotisme.html">Chaotisme</a>
-</h1>
+<hr> <!- -------------------------------------- -->
+<h2> 
+	Investigations :
+</h2>
 
+<h3>
+<ol>
+	<li> <a href="abstraction.html">Abastraction</a> </li>
+	<br/>
+	<li> <a href="cascade.html">Cascade</a> </li>
+	<br/>
+	<li> <a href="chaotisme.html">Chaotisme</a> </li>
+	<br/>
+	<li> <a href="cri_primal.html">Cri primal</a> </li>
+	<br/>
+	<li> <a href="duel.html">Duel</a> </li>
+	<br/>
+	<li> <a href="jarnvag.html">Järnväg</a> </li>
+	<br/>
+	<li> <a href="metabede.html">Méta-BD</a> </li>
+	<br/>
+	<li> <a href="qqs_dessins.html">Quelques desins</a> </li>
+	<br/>
+	<li> <a href="qqs_gouaches_et_aquarelles.html">
+		Quelques aquarelles, gouaches et pastels
+		</a> </li>
+	<br/>
+	<li> <a href="qqs_peintures.html">Quelques peintures</a> </li>
+	<br/>
+	<li> <a href="qqs_portraits.html">Quelques portraits</a> </li>
+	<br/>
+	<li> <a href="shoah.html">Shoah</a> </li>
+	<br/>
+	<li> <a href="torsion.html">Torsion</a> </li>
+	<br/>
+	<li> <a href="autres.html">Autres</a> </li>
+</ol>
+</h3>
 
-</center>
+<hr> <!- -------------------------------------- -->
+<a href="https://www.facebook.com/MikiWakaaa">
+Facebook
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.instagram.com/miki.wakaaa/">
+Instagram
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://twitter.com/mikiwakaaa">
+Twitter
+</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="https://www.youtube.com/user/mikiwakaaa">
+Youtube
+</a>
+
 </body>
 </html>
