--- a/autres.html
+++ b/autres.html
@@ -28,42 +28,42 @@
 
 <br><br><br>
 
-<a href="__AUTRES/au_1.jpg">
-	<img src="__AUTRES/au_1_thumbnail.jpg">
+<a href="AUTRES/au_1.jpg">
+	<img src="AUTRES/au_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__AUTRES/au_2.jpg">
-	<img src="__AUTRES/au_2_thumbnail.jpg">
+<a href="AUTRES/au_2.jpg">
+	<img src="AUTRES/au_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__AUTRES/au_3.jpg">
-	<img src="__AUTRES/au_3_thumbnail.jpg">
+<a href="AUTRES/au_3.jpg">
+	<img src="AUTRES/au_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__AUTRES/au_4.jpg">
-	<img src="__AUTRES/au_4_thumbnail.jpg">
+<a href="AUTRES/au_4.jpg">
+	<img src="AUTRES/au_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__AUTRES/au_5.jpg">
-	<img src="__AUTRES/au_5_thumbnail.jpg">
+<a href="AUTRES/au_5.jpg">
+	<img src="AUTRES/au_5_thumbnail.jpg">
 </a>
 <br><br>
 
-<a href="__AUTRES/au_6.jpg">
-	<img src="__AUTRES/au_6_thumbnail.jpg">
+<a href="AUTRES/au_6.jpg">
+	<img src="AUTRES/au_6_thumbnail.jpg">
 </a>
 <br><br>
 
-<a href="__AUTRES/au_7.jpg">
-	<img src="__AUTRES/au_7_thumbnail.jpg">
+<a href="AUTRES/au_7.jpg">
+	<img src="AUTRES/au_7_thumbnail.jpg">
 </a>
 <br><br>
 
