--- a/florilege.html
+++ b/florilege.html
@@ -27,152 +27,152 @@
 <center>
 <br><br><br>
 
-	<a href="__FLORILEGE/le_reflet.jpg"><img src="__FLORILEGE/le_reflet_thumbnail.jpg"></a>
+	<a href="FLORILEGE/le_reflet.jpg"><img src="FLORILEGE/le_reflet_thumbnail.jpg"></a>
 	<br><br>
 	Le reflet
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_masque.jpg"><img src="__FLORILEGE/homme_masque_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_masque.jpg"><img src="FLORILEGE/homme_masque_thumbnail.jpg"></a>
 	<br><br>
 	L'homme masqué
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/a_1.jpg">
-		<img src="__FLORILEGE/a_1_thumbnail.jpg">
+	<a href="FLORILEGE/a_1.jpg">
+		<img src="FLORILEGE/a_1_thumbnail.jpg">
 	</a>
 	<br><br>
 	Portrait chaotique de Laureline
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/a_2.jpg">
-		<img src="__FLORILEGE/a_2_thumbnail.jpg">
+	<a href="FLORILEGE/a_2.jpg">
+		<img src="FLORILEGE/a_2_thumbnail.jpg">
 	</a>
 	<br><br>
 	Portrait chaotique de Jim Phelps
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/visage_regard.jpg"><img src="__FLORILEGE/visage_regard_thumbnail.jpg"></a>
+	<a href="FLORILEGE/visage_regard.jpg"><img src="FLORILEGE/visage_regard_thumbnail.jpg"></a>
 	<br><br>
 	Visage au regard brouillé
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/monde_des_vivants.jpg"><img src="__FLORILEGE/monde_des_vivants_thumbnail.jpg"></a>
+	<a href="FLORILEGE/monde_des_vivants.jpg"><img src="FLORILEGE/monde_des_vivants_thumbnail.jpg"></a>
 	<br><br>
 	Le monde des vivants
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_animaux_machine_vivre.jpg"><img src="__FLORILEGE/homme_animaux_machine_vivre_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_animaux_machine_vivre.jpg"><img src="FLORILEGE/homme_animaux_machine_vivre_thumbnail.jpg"></a>
 	<br><br>
 	Homme et animaux dans la Machine Vivre
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/prison_interieure.jpg"><img src="__FLORILEGE/prison_interieure_thumbnail.jpg"></a>
+	<a href="FLORILEGE/prison_interieure.jpg"><img src="FLORILEGE/prison_interieure_thumbnail.jpg"></a>
 	<br><br>
 	La prison intérieure
 	<br><br><br><br><br>	
 	
-	<a href="__FLORILEGE/la_pensive.jpg"><img src="__FLORILEGE/la_pensive_thumbnail.jpg"></a>
+	<a href="FLORILEGE/la_pensive.jpg"><img src="FLORILEGE/la_pensive_thumbnail.jpg"></a>
 	<br><br>
 	La pensive
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/abstraction_duelle.jpg"><img src="__FLORILEGE/abstraction_duelle_thumbnail.jpg"></a>
+	<a href="FLORILEGE/abstraction_duelle.jpg"><img src="FLORILEGE/abstraction_duelle_thumbnail.jpg"></a>
 	<br><br>
 	Abstraction duelle
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/nu_marchant.jpg"><img src="__FLORILEGE/nu_marchant_thumbnail.jpg"></a>
+	<a href="FLORILEGE/nu_marchant.jpg"><img src="FLORILEGE/nu_marchant_thumbnail.jpg"></a>
 	<br><br>
 	Nu marchant
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/portrait_blanc_gris.jpg"><img src="__FLORILEGE/portrait_blanc_gris_thumbnail.jpg"></a>
+	<a href="FLORILEGE/portrait_blanc_gris.jpg"><img src="FLORILEGE/portrait_blanc_gris_thumbnail.jpg"></a>
 	<br><br>
 	Portrait en gris et blanc
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_au_torse_nu.jpg"><img src="__FLORILEGE/homme_au_torse_nu_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_au_torse_nu.jpg"><img src="FLORILEGE/homme_au_torse_nu_thumbnail.jpg"></a>
 	<br><br>
 	Homme au torse nu
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/firminus.jpg"><img src="__FLORILEGE/firminus_thumbnail.jpg"></a>
+	<a href="FLORILEGE/firminus.jpg"><img src="FLORILEGE/firminus_thumbnail.jpg"></a>
 	<br><br>
 	Firminus
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/portrait_encre.jpg"><img src="__FLORILEGE/portrait_encre_thumbnail.jpg"></a>
+	<a href="FLORILEGE/portrait_encre.jpg"><img src="FLORILEGE/portrait_encre_thumbnail.jpg"></a>
 	<br><br>
 	Portrait à l'encre
 
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/oiseau_montagne_et_soleil.jpg"><img src="__FLORILEGE/oiseau_montagne_et_soleil_thumbnail.jpg"></a>
+	<a href="FLORILEGE/oiseau_montagne_et_soleil.jpg"><img src="FLORILEGE/oiseau_montagne_et_soleil_thumbnail.jpg"></a>
 	<br><br>
 	L'oiseau dans le jour naissant
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_au_pli.jpg"><img src="__FLORILEGE/homme_au_pli_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_au_pli.jpg"><img src="FLORILEGE/homme_au_pli_thumbnail.jpg"></a>
 	<br><br>
 	Homme au pli
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_double_bulle.jpg"><img src="__FLORILEGE/homme_double_bulle_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_double_bulle.jpg"><img src="FLORILEGE/homme_double_bulle_thumbnail.jpg"></a>
 	<br><br>
 	Homme à double bulle
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/homme_caressant_chat.jpg"><img src="__FLORILEGE/homme_caressant_chat_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_caressant_chat.jpg"><img src="FLORILEGE/homme_caressant_chat_thumbnail.jpg"></a>
 	<br><br>
 	Homme caressant un chat	
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/femme_assise.jpg"><img src="__FLORILEGE/femme_assise_thumbnail.jpg"></a>
+	<a href="FLORILEGE/femme_assise.jpg"><img src="FLORILEGE/femme_assise_thumbnail.jpg"></a>
 	<br><br>
 	Femme assise
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/homme_chat_ville.jpg"><img src="__FLORILEGE/homme_chat_ville_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_chat_ville.jpg"><img src="FLORILEGE/homme_chat_ville_thumbnail.jpg"></a>
 	<br><br>
 	Homme et chat dans la ville
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/enfants_animaux.jpg"><img src="__FLORILEGE/enfants_animaux_thumbnail.jpg"></a>
+	<a href="FLORILEGE/enfants_animaux.jpg"><img src="FLORILEGE/enfants_animaux_thumbnail.jpg"></a>
 	<br><br>
 	Enfants et animaux
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/le_questionneur.jpg"><img src="__FLORILEGE/le_questionneur_thumbnail.jpg"></a>
+	<a href="FLORILEGE/le_questionneur.jpg"><img src="FLORILEGE/le_questionneur_thumbnail.jpg"></a>
 	<br><br>
 	Le philosophe
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/trois_hommes_et_masque.jpg"><img src="__FLORILEGE/trois_hommes_et_masque_thumbnail.jpg"></a>
+	<a href="FLORILEGE/trois_hommes_et_masque.jpg"><img src="FLORILEGE/trois_hommes_et_masque_thumbnail.jpg"></a>
 	<br><br>
 	Trois hommes et un masque
 	<br><br><br><br><br>
 
-	<a href="__FLORILEGE/homme_accoude.jpg"><img src="__FLORILEGE/homme_accoude_thumbnail.jpg"></a>
+	<a href="FLORILEGE/homme_accoude.jpg"><img src="FLORILEGE/homme_accoude_thumbnail.jpg"></a>
 	<br><br>
 	Homme accoudé
 	<br><br><br><br><br>	
 
-	<a href="__FLORILEGE/le_general.jpg"><img src="__FLORILEGE/le_general_thumbnail.jpg"></a>
+	<a href="FLORILEGE/le_general.jpg"><img src="FLORILEGE/le_general_thumbnail.jpg"></a>
 	<br><br>
 	Le Général
 	<br><br><br><br><br>	
 
-	<a href="__FLORILEGE/le_dessinateur.jpg"><img src="__FLORILEGE/le_dessinateur_thumbnail.jpg"></a>
+	<a href="FLORILEGE/le_dessinateur.jpg"><img src="FLORILEGE/le_dessinateur_thumbnail.jpg"></a>
 	<br><br>
 	Le dessinateur
 	<br><br><br><br><br>	
 
-	<a href="__FLORILEGE/la_coquette.jpg"><img src="__FLORILEGE/la_coquette_thumbnail.jpg"></a>
+	<a href="FLORILEGE/la_coquette.jpg"><img src="FLORILEGE/la_coquette_thumbnail.jpg"></a>
 	<br><br>
 	La coquette
 	<br><br><br><br><br>
 	
-	<a href="__FLORILEGE/femme_assise_sur_lit.jpg"><img src="__FLORILEGE/femme_assise_sur_lit_thumbnail.jpg"></a>
+	<a href="FLORILEGE/femme_assise_sur_lit.jpg"><img src="FLORILEGE/femme_assise_sur_lit_thumbnail.jpg"></a>
 	<br><br>
 	Femme assise sur un lit
 	<br><br><br><br><br>
