--- a/qqs_portraits.html
+++ b/qqs_portraits.html
@@ -27,53 +27,53 @@
 <center>
 <br><br><br> 
 
-<a href="__QQS_PORTRAITS/qpo_1.jpg">
-	<img src="__QQS_PORTRAITS/qpo_1_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_1.jpg">
+	<img src="QQS_PORTRAITS/qpo_1_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_2.jpg">
-	<img src="__QQS_PORTRAITS/qpo_2_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_2.jpg">
+	<img src="QQS_PORTRAITS/qpo_2_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_3.jpg">
-	<img src="__QQS_PORTRAITS/qpo_3_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_3.jpg">
+	<img src="QQS_PORTRAITS/qpo_3_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_4.jpg">
-	<img src="__QQS_PORTRAITS/qpo_4_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_4.jpg">
+	<img src="QQS_PORTRAITS/qpo_4_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_5.jpg">
-	<img src="__QQS_PORTRAITS/qpo_5_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_5.jpg">
+	<img src="QQS_PORTRAITS/qpo_5_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_6.jpg">
-	<img src="__QQS_PORTRAITS/qpo_6_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_6.jpg">
+	<img src="QQS_PORTRAITS/qpo_6_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_7.jpg">
-	<img src="__QQS_PORTRAITS/qpo_7_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_7.jpg">
+	<img src="QQS_PORTRAITS/qpo_7_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_8.jpg">
-	<img src="__QQS_PORTRAITS/qpo_8_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_8.jpg">
+	<img src="QQS_PORTRAITS/qpo_8_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_9.jpg">
-	<img src="__QQS_PORTRAITS/qpo_9_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_9.jpg">
+	<img src="QQS_PORTRAITS/qpo_9_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__QQS_PORTRAITS/qpo_10.jpg">
-	<img src="__QQS_PORTRAITS/qpo_10_thumbnail.jpg"></a>
+<a href="QQS_PORTRAITS/qpo_10.jpg">
+	<img src="QQS_PORTRAITS/qpo_10_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
