--- a/abstraction.html
+++ b/abstraction.html
@@ -27,55 +27,55 @@
 
 <br><br><br>
 
-<a href="__ABSTRACTION/a_1.jpg">
-	<img src="__ABSTRACTION/a_1_thumbnail.jpg">
+<a href="ABSTRACTION/a_1.jpg">
+	<img src="ABSTRACTION/a_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_2.jpg">
-	<img src="__ABSTRACTION/a_2_thumbnail.jpg">
+<a href="ABSTRACTION/a_2.jpg">
+	<img src="ABSTRACTION/a_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_3.jpg">
-	<img src="__ABSTRACTION/a_3_thumbnail.jpg">
+<a href="ABSTRACTION/a_3.jpg">
+	<img src="ABSTRACTION/a_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_4.jpg">
-	<img src="__ABSTRACTION/a_4_thumbnail.jpg">
+<a href="ABSTRACTION/a_4.jpg">
+	<img src="ABSTRACTION/a_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_5.jpg">
-	<img src="__ABSTRACTION/a_5_thumbnail.jpg">
+<a href="ABSTRACTION/a_5.jpg">
+	<img src="ABSTRACTION/a_5_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_6.jpg">
-	<img src="__ABSTRACTION/a_6_thumbnail.jpg">
+<a href="ABSTRACTION/a_6.jpg">
+	<img src="ABSTRACTION/a_6_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
-<a href="__ABSTRACTION/a_7.jpg">
-	<img src="__ABSTRACTION/a_7_thumbnail.jpg">
-</a>
-<br><br>
-<br><br><br><br><br>
-
-<a href="__ABSTRACTION/a_8.jpg">
-	<img src="__ABSTRACTION/a_8_thumbnail.jpg">
+<a href="ABSTRACTION/a_7.jpg">
+	<img src="ABSTRACTION/a_7_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__ABSTRACTION/a_9.jpg">
-	<img src="__ABSTRACTION/a_9_thumbnail.jpg">
+<a href="ABSTRACTION/a_8.jpg">
+	<img src="ABSTRACTION/a_8_thumbnail.jpg">
+</a>
+<br><br>
+<br><br><br><br><br>
+
+<a href="ABSTRACTION/a_9.jpg">
+	<img src="ABSTRACTION/a_9_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
