--- a/cascade.html
+++ b/cascade.html
@@ -27,68 +27,68 @@
 <center> 
 <br><br><br> 
  
-<a href="__CASCADE/c_1.jpg">
-	<img src="__CASCADE/c_1_thumbnail.jpg">
+<a href="CASCADE/c_1.jpg">
+	<img src="CASCADE/c_1_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_2.jpg">
-	<img src="__CASCADE/c_2_thumbnail.jpg">
+<a href="CASCADE/c_2.jpg">
+	<img src="CASCADE/c_2_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_3.jpg">
-	<img src="__CASCADE/c_3_thumbnail.jpg">
+<a href="CASCADE/c_3.jpg">
+	<img src="CASCADE/c_3_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_4.jpg">
-	<img src="__CASCADE/c_4_thumbnail.jpg">
+<a href="CASCADE/c_4.jpg">
+	<img src="CASCADE/c_4_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_5.jpg">
-	<img src="__CASCADE/c_5_thumbnail.jpg">
+<a href="CASCADE/c_5.jpg">
+	<img src="CASCADE/c_5_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_6.jpg">
-	<img src="__CASCADE/c_6_thumbnail.jpg">
+<a href="CASCADE/c_6.jpg">
+	<img src="CASCADE/c_6_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_7.jpg">
-	<img src="__CASCADE/c_7_thumbnail.jpg">
+<a href="CASCADE/c_7.jpg">
+	<img src="CASCADE/c_7_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_8.jpg">
-	<img src="__CASCADE/c_8_thumbnail.jpg">
+<a href="CASCADE/c_8.jpg">
+	<img src="CASCADE/c_8_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_9.jpg">
-	<img src="__CASCADE/c_9_thumbnail.jpg">
+<a href="CASCADE/c_9.jpg">
+	<img src="CASCADE/c_9_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_10.jpg">
-	<img src="__CASCADE/c_10_thumbnail.jpg">
+<a href="CASCADE/c_10.jpg">
+	<img src="CASCADE/c_10_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__CASCADE/c_11.jpg">
-	<img src="__CASCADE/c_11_thumbnail.jpg">
+<a href="CASCADE/c_11.jpg">
+	<img src="CASCADE/c_11_thumbnail.jpg">
 </a>
 <br><br>
 <br><br><br><br><br>
