--- a/shoah.html
+++ b/shoah.html
@@ -27,23 +27,23 @@
 <center> 
 <br><br><br>
  
-<a href="__SHOAH/s_1.jpg">
-	<img src="__SHOAH/s_1_thumbnail.jpg"></a>
+<a href="SHOAH/s_1.jpg">
+	<img src="SHOAH/s_1_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__SHOAH/s_2.jpg">
-	<img src="__SHOAH/s_2_thumbnail.jpg"></a>
+<a href="SHOAH/s_2.jpg">
+	<img src="SHOAH/s_2_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__SHOAH/s_3.jpg">
-	<img src="__SHOAH/s_3_thumbnail.jpg"></a>
+<a href="SHOAH/s_3.jpg">
+	<img src="SHOAH/s_3_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
-<a href="__SHOAH/s_4.jpg">
-	<img src="__SHOAH/s_4_thumbnail.jpg"></a>
+<a href="SHOAH/s_4.jpg">
+	<img src="SHOAH/s_4_thumbnail.jpg"></a>
 <br><br>
 <br><br><br><br><br>
 
